Fixed DB issues, disabled loading screen spinner

--- a/server/config/core.prod.cfg
+++ b/server/config/core.prod.cfg
@@ -47,6 +47,8 @@ setr game_enableFlyThroughWindscreen true
 setr game_enablePlayerJumpRagdollControl true
 # allowing to activate native ragdoll on collision game logic
 setr game_enablePlayerRagdollOnCollision true
+# disable busy spinner on loading screen
+setr sv_showBusySpinnerOnLoadingScreen false
 # disabled reticule
 setr profile_skfx 0
 setr profile_gfxCityDensity 0
