--- a/server/config/admins.cfg
+++ b/server/config/admins.cfg
@@ -2,3 +2,12 @@
 add_ace group.admin command allow # allow all commands
 
 add_principal resource.sandbox-base group.admin
+
+## Different Permissions Types ##
+# management
+# dev
+# admin
+# operations
+
+## Permissions ##
+add_ace identifier.steam:someId queue.management allow # Name
