Update readme install guide, & permissions cfg

--- a/server/server.prod.cfg
+++ b/server/server.prod.cfg
@@ -38,8 +38,7 @@ set winter_only "false"
 exec ./config/database.prod.cfg
 exec ./config/mongodb.prod.cfg
 exec ./config/core.prod.cfg
-exec ./config/admins.cfg
-exec ./config/resources.prod.cfg
+exec ./config/permissions.cfg
 exec ./config/resources.cfg
 exec ./config/voice.cfg
 exec ./config/prod.logs.cfg
