--- a/server/server.ptr.cfg
+++ b/server/server.ptr.cfg
@@ -30,6 +30,6 @@ sv_master1 ""
 exec ./config/database.ptr.cfg
 exec ./config/mongodb.ptr.cfg
 exec ./config/core.ptr.cfg
-exec ./config/admins.cfg
+exec ./config/permissions.cfg
 exec ./config/resources.cfg
 exec ./config/voice.cfg
