ox_inventory updates / fixes (Read description)
Added ability to pass peds as shops (Converted all shops to peds), so they can be directly integrated with the shop system
Ability to pass job for certain items within a shop (Updated UI to allow for this)
Fixed shops duty checks & it not reading groups as an array
Added ability to pass permission key for shops (For shops like the Food Wholesaler)

--- a/server/config/ox.cfg
+++ b/server/config/ox.cfg
@@ -4,7 +4,7 @@
 setr inventory:framework "sandbox"
  
 # Number of slots for player inventories
-setr inventory:slots 50
+setr inventory:slots 49 # - 9 because that's what utility inventory uses
  
 # Maximum carry capacity for players, in grams (frameworks may override this)
 setr inventory:weight 50000
