--- a/server/config/ox.cfg
+++ b/server/config/ox.cfg
@@ -119,17 +119,17 @@ set inventory:vehicleloot [
     ["cola", 1, 1],
     ["water", 1, 1],
     ["garbage", 1, 2, 50],
-    ["panties", 1, 1, 5],
+    ["foodbag", 1, 1, 5],
     ["money", 1, 50],
     ["money", 200, 400, 5],
-    ["bandage", 1, 1]
+    ["bandage", 1, 1],
 ]
  
 set inventory:dumpsterloot [
-    ["mustard", 1, 1],
+    ["petrock", 1, 1],
     ["garbage", 1, 3],
     ["money", 1, 10],
-    ["burger", 1, 1]
+    ["cheeseburger", 1, 1]
 ]
  
 # Set the markers for the various drops, stashes, shops
