fix: Loot table fixed in ox.cfg

--- a/server/config/ox.cfg
+++ b/server/config/ox.cfg
@@ -122,7 +122,7 @@ set inventory:vehicleloot [
     ["foodbag", 1, 1, 5],
     ["money", 1, 50],
     ["money", 200, 400, 5],
-    ["bandage", 1, 1],
+    ["bandage", 1, 1]
 ]
  
 set inventory:dumpsterloot [
