Changed SQL database name & updated name in configs

--- a/server/config/database.ptr.cfg
+++ b/server/config/database.ptr.cfg
@@ -1,4 +1,4 @@
-set mysql_connection_string "mysql://root@localhost:3306/database_ptr?charset=utf8mb4"
+set mysql_connection_string "mysql://root@localhost:3306/sandbox-framework?charset=utf8mb4"
 set mysql_slow_query_warning 300
 #set mysql_debug true
 set mysql_ui true
