Creating doors now gets sent to a discord webhook - no more creating a text file

--- a/server/config/ptr.logs.cfg
+++ b/server/config/ptr.logs.cfg
@@ -5,3 +5,4 @@ set discord_kill_webhook "#"
 set discord_pwnzor_webhook "#"
 set discord_error_webhook "#"
 set discord_donation_webhook "#"
+set create_newdoorlock_log "#"
