--- a/server/config/prod.logs.cfg
+++ b/server/config/prod.logs.cfg
@@ -6,3 +6,4 @@ set discord_pwnzor_webhook "#"
 set discord_error_webhook "#"
 set discord_donation_webhook "#"
 set discord_loot_webhook "#"
+set create_newdoorlock_log "#"
