--- a/server/resources/[sandbox]/sandbox-characters/ui/package.json
+++ b/server/resources/[sandbox]/sandbox-characters/ui/package.json
@@ -34,6 +34,7 @@
 	},
 	"homepage": "https://github.com/2277/react-fivem#readme",
 	"dependencies": {
+		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
 		"@babel/polyfill": "^7.12.1",
 		"@date-io/date-fns": "2.16.0",
 		"@date-io/moment": "^2.14.0",
@@ -62,6 +63,7 @@
 		"react-router-dom": "^6.3.0",
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0",
+		"rimraf": "^6.0.1",
 		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
