--- a/server/config/resources.cfg
+++ b/server/config/resources.cfg
@@ -45,7 +45,7 @@
 	ensure sandbox-businesses
 	ensure sandbox-vacation
 	ensure sandbox-finance
-	ensure ox_doorlocks
+	ensure ox_doorlock
 	ensure sandbox-elevators
 	ensure sandbox-laptop
 	ensure sandbox-killzones
