--- a/server/resources/[sandbox]/sandbox-laptop/ui/package.json
+++ b/server/resources/[sandbox]/sandbox-laptop/ui/package.json
@@ -36,7 +36,7 @@
 	"dependencies": {
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
 		"@ckeditor/ckeditor5-react": "^4.0.1",
-		"mythic-ckeditor": "git+https://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:x-oauth-basic@github.com/mythicrp/ckeditor.git",
+		"mythic-ckeditor": "git+https://github.com/AutLaaw/ckeditor.git",
 		"@emotion/react": "^11.4.0",
 		"@emotion/styled": "^11.3.0",
 		"@fortawesome/fontawesome-svg-core": "^6.4.0",
