Rewrote sandbox-loadscreen > vite + ts
The loading bar is a bit messy, but the logic should work fine

--- a/server/config/resources.cfg
+++ b/server/config/resources.cfg
@@ -2,12 +2,11 @@
 	ensure mapmanager
 	ensure yarn
 	ensure spawnmanager
-	ensure loadscreen
 
 # Core Resources
 	ensure oxmysql
 	ensure ox_lib
-	# ensure sandbox-loadscreen
+	ensure sandbox-loadscreen
 	ensure sandbox-base
 	ensure sandbox-queue
 	ensure sandbox-pwnzor
