Rename sandbox-keybinds > sandbox-kbs
Doing this so longer entries can be shown in keybind list (settings)

--- a/server/config/resources.cfg
+++ b/server/config/resources.cfg
@@ -16,7 +16,7 @@
 	ensure sandbox-commands
 	ensure sandbox-characters
 	ensure sandbox-ped
-	ensure sandbox-keybinds
+	ensure sandbox-kbs
 	ensure sandbox-admin
 	ensure sandbox-ipl
 	ensure sandbox-polyzone
