--- a/server/server.ptr.cfg
+++ b/server/server.ptr.cfg
@@ -1,8 +1,6 @@
-# ################
-# || SANDBOXRP  ||
-# ################
+## Sandbox RP Framework Config
 
-## DO NOT EDIT ##
+## Edit these below with your own risk!
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 sv_maxclients 8
@@ -11,10 +9,10 @@ sets tags "housing, gangs, robberies, drugs, custom cars, custom clothing, pd, e
 sv_endpointPrivacy true
 sv_scriptHookAllowed 0
 
-## DO NOT EDIT ##
+## Edit these below with your own risk! 
 sv_licenseKey "CFX_KEY_HERE"
-sv_hostname "SandboxRP | PTR"
-sets sv_projectName "SandboxRP | PTR"
+sv_hostname "Sandbox RP Framework"
+sets sv_projectName "Sandbox RP Framework"
 sets sv_projectDesc "An advanced FiveM RP framework including jobs, gangs, housing & more!"
 sets locale "en-US"
 load_server_icon logo.png
