--- a/server/server.prod.cfg
+++ b/server/server.prod.cfg
@@ -1,24 +1,21 @@
-# ################
-# || SANDBOXRP  ||
-# ################
+## Sandbox RP Framework Config
 
-## DO NOT EDIT ##
+## Edit these below with your own risk!
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 
-sv_maxclients 250 # need a cfx patreon license
+sv_maxclients 10 # You need a cfx patreon license to got over 10 people
 set steam_webApiKey "none"
 sets tags "housing, gangs, robberies, drugs, custom cars, custom clothing, pd, ems, racing"
 sv_endpointPrivacy true
 sv_scriptHookAllowed 0
 
-## DO NOT EDIT ##
+## Edit these below with your own risk!
 sv_licenseKey ""
-sv_tebexSecret
-sv_hostname "SandboxRP"
-sets discord "https://discord.gg/sandboxgg"
-sets website "https://sandboxrp.gg/"
-sets sv_projectName "SandboxRP"
+sv_hostname "Sandbox RP Framework"
+sets discord ""
+sets website ""
+sets sv_projectName "Sandbox RP Framework"
 sets sv_projectDesc "An advanced FiveM RP framework including jobs, gangs, housing & more!"
 sets locale "en-US"
 load_server_icon logo.png
