--- a/server/server.prod.cfg
+++ b/server/server.prod.cfg
@@ -1,6 +1,8 @@
-## Sandbox RP Framework Config
+# ################
+# || SANDBOXRP  ||
+# ################
 
-## Edit these below with your own risk!
+## Edit the below at your own risk! ##
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 
@@ -10,8 +12,8 @@ sets tags "housing, gangs, robberies, drugs, custom cars, custom clothing, pd, e
 sv_endpointPrivacy true
 sv_scriptHookAllowed 0
 
-## Edit these below with your own risk!
-sv_licenseKey ""
+## Edit the below at your own risk! ##
+sv_licenseKey "CFX_KEY_HERE"
 sv_hostname "Sandbox RP Framework"
 sets discord ""
 sets website ""
