--- a/server/server.ptr.cfg
+++ b/server/server.ptr.cfg
@@ -1,18 +1,21 @@
-## Sandbox RP Framework Config
+# ################
+# || SANDBOXRP  ||
+# ################
 
-## Edit these below with your own risk!
+## Edit the below at your own risk! ##
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
+
 sv_maxclients 8
 set steam_webApiKey "none"
 sets tags "housing, gangs, robberies, drugs, custom cars, custom clothing, pd, ems, racing"
 sv_endpointPrivacy true
 sv_scriptHookAllowed 0
 
-## Edit these below with your own risk! 
+## Edit the below at your own risk! ##
 sv_licenseKey "CFX_KEY_HERE"
-sv_hostname "Sandbox RP Framework"
-sets sv_projectName "Sandbox RP Framework"
+sv_hostname "Sandbox RP Framework | PTR"
+sets sv_projectName "Sandbox RP Framework | PTR"
 sets sv_projectDesc "An advanced FiveM RP framework including jobs, gangs, housing & more!"
 sets locale "en-US"
 load_server_icon logo.png
